[package]
name = "test_dff"
version = "0.1.0"
authors = ["benbr8"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["staticlib"]

[dependencies]
librstb = {path = "../rstb", default-features = false, features = ["verilator"]}
lazy_static = "*"

[build-dependencies]
# cc = "1.0.3"
bindgen = "*"

#[profile.release]
#opt-level = 3